--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,23 @@ Headers:		'Roboto', sans-serif;
   margin: 0px 100px ;
 }
 
+.bee img{
+  width: 120px !important;
+
+}
+
+
+
+.no-border2 {
+  border: none !important;
+  font-size: 1.5em !important;
+  text-align: justify;
+  margin: 70px 100px ;
+}
+
+
+
+
 .nosocolor{
   background-color: #444444;
 }
@@ -133,7 +150,7 @@ a {
   -moz-transition: 0.2s;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  color: #E09F33;
+  color: #E09F33 !important;
   outline: none !important;
 }
 a:hover {
@@ -559,7 +576,7 @@ ul.list-links li a:hover {
   line-height: 1;
   text-transform: none;
   content: "\f104";
-  color: #1396e2;
+  color: #FFF;
   right: 0;
   font-size: 18px;
   margin-right: 10px;
@@ -579,6 +596,8 @@ ul.list-links li a:hover {
 .no-border {
   border: none !important;
 }
+
+
 
 .no-bottom-margin {
   margin-bottom: 0 !important;
@@ -676,49 +695,21 @@ ul.list-links li a:hover {
 .navigation .navbar .navbar-nav > li.has-child {
     position: relative;
 }
-.navigation .navbar .navbar-nav > li.has-child:after {
-    text-shadow: none;
-    -webkit-font-smoothing: antialiased;
-    font-family: 'fontawesome';
-    speak: none;
-    font-weight: normal;
-    font-variant: normal;
-    line-height: 1;
-    text-transform: none;
-    content: "\f0d7";
-    color: #1396e2;
-    font-size: 8px;
-    height: 10px;
-    position: absolute;
-    top: 3px;
-    bottom: 0;
-    margin: auto;
-    right: 2px;
-}
+
 .navigation .navbar .navbar-nav > li a {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
     opacity: 0.7;
-    color: #2a2a2a;
+    color: #2D26F2C;
+
+    font-size: 1em;
+
     line-height: 0;
     margin: 0;
     padding-bottom: 5px;
     padding-top: 9px;
     position: relative;
 }
-.navigation .navbar .navbar-nav > li a:after {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-    opacity: 0;
-    -moz-transition: 0.2s;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-    background-color: #1396e2;
-    bottom: -5px;
-    content: "";
-    left: 16px;
-    height: 1px;
-    position: absolute;
-    width: 10px;
-}
+
 .navigation .navbar .navbar-nav > li a:hover {
     filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
     opacity: 1;
@@ -847,8 +838,8 @@ ul.list-links li a:hover {
     -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-    background-color: #1396e2;
-    color: #fff;
+    background-color: #E09F33;
+    color: #fff !important;
 }
 .navigation .navbar .navbar-nav > li .child-navigation li .child-navigation {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
@@ -973,6 +964,7 @@ ul.list-links li a:hover {
 }
 .navigation .secondary-navigation .user-area .language-bar {
     float: right;
+
 }
 .navigation .secondary-navigation figure {
     display: inline-block;
@@ -2205,7 +2197,7 @@ ul.list-links li a:hover {
 ****/
 .language-bar {
   float: right;
-  margin-left: 15px;
+  margin-left: 35px;
 }
 .language-bar a {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
@@ -2213,7 +2205,7 @@ ul.list-links li a:hover {
   -moz-transition: 0.4s;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  margin-left: 5px !important;
+  margin-left: 15px !important;
 }
 .language-bar a.active {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
@@ -2945,7 +2937,7 @@ ul.list-links li a:hover {
   -moz-transition: 0.4s;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  background-color: #E09F33;
+  
   display: inline-block !important;
   width: 50px;
   height: 50px;
@@ -2955,13 +2947,14 @@ ul.list-links li a:hover {
 .property-carousel .owl-controls .owl-prev:after, .property-carousel .owl-controls .owl-next:after {
   text-shadow: none;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Titillium Web' !important;
+  font-family: 'fontawesome' !important;
   speak: none;
   font-weight: normal;
+  font-size: 50px !important;
   font-variant: normal;
   line-height: 1;
   text-transform: none;
-  color: #fff;
+  color: #E09F33 !important;
   width: 5px;
   height: 15px;
   position: absolute;
@@ -3012,7 +3005,7 @@ ul.list-links li a:hover {
 .property-features-list li:before {
   text-shadow: none;
   -webkit-font-smoothing: antialiased;
-  font-family: 'Titillium Web' !important;
+  font-family: 'fontawesome';
   speak: none;
   font-weight: normal;
   font-variant: normal;
@@ -3339,7 +3332,7 @@ ul.list-links li a:hover {
   transition: 0.2s;
   color: #fff;
   position: absolute;
-  bottom: 0;
+  bottom: 50px;
   margin-bottom: 20px;
   width: 100%;
   z-index: 2;
@@ -3404,6 +3397,8 @@ ul.list-links li a:hover {
   -webkit-transition-delay: 0.3s;
   transition-delay: 0.3s;
   left: 0px;
+
+
 }
 #slider .homepage-slider .slide .overlay .info.animate-description-in h3 {
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
@@ -3472,6 +3467,8 @@ ul.list-links li a:hover {
 #slider .homepage-slider .owl-controls .owl-prev:after {
   content: "\f104";
   left: 20px;
+
+
 }
 
 .show-all {
@@ -5848,12 +5845,12 @@ body, html {
     float: none;
   }
   .navigation .secondary-navigation .user-area a {
-    color: #fff;
+    color: #E09F33;
     margin-left: 0;
     margin-right: 10px;
   }
   .navigation .secondary-navigation .user-area a:hover {
-    color: #fff;
+    color: #E09F33;
   }
 
   .owl-controls {
